# ChangeLog for dev-ruby/dm-serializer
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*dm-serializer-1.2.2 (29 Oct 2013)

  29 Oct 2013; Peter Wilmott <p@p8952.info> +dm-serializer-1.2.2.ebuild,
  +metadata.xml:
  dev-ruby/dm-serializer: Initial commit, dependency for datamapper(dm)-1.2.x